Implemented clearing local data

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -312,4 +312,6 @@
     <string name="removed_select_set_text">Выберите набор карт</string>
     <string name="removed_campaign_log_text">Отслеживайте здесь карты, которые навсегда убираются из колоды пути.</string>
     <string name="something_went_wrong">Что-то пошло не так.</string>
+    <string name="diagnostics_clear_decks">Очистить данные локальных колод</string>
+    <string name="diagnostics_clear_campaigns">Очистить данные локальных кампании</string>
 </resources>
