--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -313,5 +313,9 @@
     <string name="removed_campaign_log_text">Отслеживайте здесь карты, которые навсегда убираются из колоды пути.</string>
     <string name="something_went_wrong">Что-то пошло не так.</string>
     <string name="diagnostics_clear_decks">Очистить данные локальных колод</string>
+    <string name="diagnostics_clear_decks_cleared">Данные колод очищены.</string>
     <string name="diagnostics_clear_campaigns">Очистить данные локальных кампании</string>
+    <string name="diagnostics_clear_campaigns_cleared">Данные кампаний очищены.</string>
+    <string name="diagnostics_clear_coil_cache">Очистить кэш изображений</string>
+    <string name="diagnostics_clear_coil_cache_cleared">Кэш изображений очищен.</string>
 </resources>
