Implemented clearing network cache

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -378,6 +378,8 @@
     <string name="diagnostics_clear_local_data_cleared">Local data is cleared.</string>
     <string name="diagnostics_clear_coil_cache">Clear image cache</string>
     <string name="diagnostics_clear_coil_cache_cleared">Image cache is cleared.</string>
+    <string name="diagnostics_clear_apollo_cache">Clear network cache.</string>
+    <string name="diagnostics_clear_apollo_cache_cleared">Network cache is cleared.</string>
 
     //loa campaign
     <string name="loa_cycle">Legacy of Ancestors</string>
