--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -163,7 +163,7 @@
     <string name="save_deck_changes_text">Кажется, вы внесли изменения, которые ещё не сохранены.</string>
     <string name="save_deck_changes_button">Сохранить изменения</string>
     <string name="discard_deck_changes_button">Отменить изменения</string>
-    <string name="saving_deck_changes_header">Сохранение…</string>
+    <string name="saving_changes_header">Сохранение…</string>
     <string name="editing_deck_screen_header">Редактирование колоды</string>
     <string name="rewards_search_tab">Награды</string>
     <string name="maladies_search_tab">Недуги</string>
