--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,7 +192,7 @@
     <string name="save_deck_changes_text">Looks like you have made some changes that have not been saved.</string>
     <string name="save_deck_changes_button">Save changes</string>
     <string name="discard_deck_changes_button">Discard changes</string>
-    <string name="saving_deck_changes_header">Saving…</string>
+    <string name="saving_changes_header">Saving…</string>
     <string name="editing_deck_screen_header">Editing deck</string>
     <string name="rewards_search_tab">Rewards</string>
     <string name="maladies_search_tab">Maladies</string>
@@ -382,7 +382,7 @@
     <string name="diagnostics_clear_apollo_cache_cleared">Network cache is cleared.</string>
 
     //loa campaign
-    <string name="loa_cycle">Legacy of Ancestors</string>
+    <string name="loa_expansion">Legacy of Ancestors</string>
     <string name="ancient_ruins">Ancient Ruins</string>
     <string name="flooded_ruins">Flooded Ruins</string>
     <string name="deep_roots">Deep Roots</string>
@@ -412,5 +412,7 @@
     <string name="talpids_squeeze">Talpid\'s Squeeze</string>
     <string name="the_cage">The Cage</string>
     <string name="connection_restriction_data_type">Connection restriction</string>
+
+    <string name="sotv_expansion">Stewards of the Valley</string>
 
 </resources>
