--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -111,6 +111,7 @@
     <string name="specialty_placeholder">Выберите специализацию</string>
     <string name="role">Роль</string>
     <string name="role_placeholder">Выберите роль</string>
+    <string name="no_roles">Нет пододящих ролей с текущей коллекцией</string>
     <string name="starter_deck_name_postfix">(Стартовый)</string>
     <string name="invalid_aspects">Выбранные черты недопустимы.</string>
     <string name="too_many_duplicates">Слишком много карт с одинаковым названием.</string>
