--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,8 @@
     <string name="deck_creation_name_placeholder">Enter a name for this deck.</string>
     <string name="starter_deck_title">Choose starter deck:</string>
     <string name="upload_to_rangersdb">Upload to RangersDB</string>
+    <string name="view_on_rangersdb">View on RangersDB</string>
+    <string name="copy_link_to_rangersdb">Link copied to clipboard</string>
     <string name="use_taboo">Follow the Elder\'s Book of Uncommon Wisdom</string>
     <string name="create_deck_button">Create deck</string>
     <string name="background">Background</string>
