--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -104,6 +104,8 @@
     <string name="deck_creation_name_placeholder">Введите название этой колоды.</string>
     <string name="starter_deck_title">Выберите стартовую колоду:</string>
     <string name="upload_to_rangersdb">Загрузить на RangersDB</string>
+    <string name="view_on_rangersdb">На RangersDB</string>
+    <string name="copy_link_to_rangersdb">Ссылка скопирована</string>
     <string name="create_deck_button">Создать колоду</string>
     <string name="background">Квалификация</string>
     <string name="background_placeholder">Выберите квалификацию</string>
