--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,6 +241,7 @@
     <string name="create_campaign_button">Create campaign</string>
     <string name="campaign">Campaign</string>
     <string name="campaign_placeholder">Choose campaign</string>
+    <string name="transfer_campaign">Transfer campaign</string>
     <string name="core_cycle">Core</string>
     <string name="general_set_general">General</string>
     <string name="general_set_the_valley">The Valley</string>
