--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -300,6 +300,7 @@
     <string name="undo_unavailable_text">Нету путешествий, которые можно откатить.</string>
     <string name="campaign_log_header">Журнал кампании</string>
     <string name="missions_campaign_log_tab">Миссии</string>
+    <string name="show_only_active_missions">Показывать только активные</string>
     <string name="add_mission_button">Добавить миссию</string>
     <string name="mission_header">Миссия</string>
     <string name="mission_day_input">День</string>
